--- a/app/src/app/login/login.component.html
+++ b/app/src/app/login/login.component.html
@@ -1,90 +1,79 @@
 <div class="container">
-  <div class="col-12">
-    <div class="row"></div>
-    <div class="row login-register-main-card d-flex justify-content-center my-5">
-      <div class="col-6">
-        <div class="card card-container">
-          <div class="card-header d-flex justify-content-center">
-            <img
-              id="profile-img"
-              src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
-              class="profile-img-card"
-            />
-
-          </div>
-          <div class="card-body">
-            @if (!isLoggedIn) {
-              <form
-                name="form"
-                (ngSubmit)="f.form.valid && onSubmit()"
-                #f="ngForm"
-                novalidate
-              >
-                <div class="form-group">
-                  <label>Username</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    name="username"
-                    [(ngModel)]="form.username"
-                    required
-                    #username="ngModel"
-                    [ngClass]="{ 'is-invalid': f.submitted && username.errors }"
-                  />
-                  @if (username.errors && f.submitted) {
-                    <div class="invalid-feedback">Username is required!</div>
-                  }
-                </div>
-                <div class="form-group">
-                  <label>Password</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    name="password"
-                    [(ngModel)]="form.password"
-                    required
-                    minlength="6"
-                    #password="ngModel"
-                    [ngClass]="{ 'is-invalid': f.submitted && password.errors }"
-                  />
-                  @if (password.errors && f.submitted) {
-                    <div class="invalid-feedback">
-                      @if (password.errors['required']) {
-                        <div>Password is required</div>
-                      }
-                      @if (password.errors['minlength']) {
-                        <div>Password must be at least 6 characters</div>
-                      }
+    <div class="row justify-content-center my-5">
+        <div class="col-md-6">
+            <div class="card login-card">
+                <div class="card-body">
+                    <div class="profile-img-container text-center">
+                        <img
+                                id="profile-img"
+                                src="assets/avatar_icon.jpg"
+                                class="profile-img-card"
+                        />
                     </div>
-                  }
+                    <form
+                            name="form"
+                            (ngSubmit)="f.form.valid && onSubmit()"
+                            #f="ngForm"
+                            novalidate
+                    >
+                        <div class="form-group">
+                            <label for="username" class="sr-only">Username</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                </div>
+                                <input
+                                        type="text"
+                                        class="form-control"
+                                        id="username"
+                                        name="username"
+                                        [(ngModel)]="form.username"
+                                        placeholder="Username"
+                                        required
+                                        #username="ngModel"
+                                        [ngClass]="{ 'is-invalid': f.submitted && username.errors }"
+                                />
+                                <div *ngIf="username.errors && f.submitted" class="invalid-feedback">Username is required!</div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="password" class="sr-only">Password</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                                </div>
+                                <input
+                                        type="password"
+                                        class="form-control"
+                                        id="password"
+                                        name="password"
+                                        [(ngModel)]="form.password"
+                                        placeholder="Password"
+                                        required
+                                        minlength="6"
+                                        #password="ngModel"
+                                        [ngClass]="{ 'is-invalid': f.submitted && password.errors }"
+                                />
+                                <div *ngIf="password.errors && f.submitted" class="invalid-feedback">
+                                    <div *ngIf="password.errors['required']">Password is required</div>
+                                    <div *ngIf="password.errors['minlength']">Password must be at least 6 characters</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group form-check">
+                            <input type="checkbox" class="form-check-input" id="rememberMe" />
+                            <label class="form-check-label" for="rememberMe">Remember me</label>
+                        </div>
+                        <button class="btn btn-primary btn-block">Login</button>
+                        <div class="d-flex justify-content-between mt-2">
+                            <a href="#" class="text-forgot-password">Forgot Password?</a>
+                        </div>
+                        <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger mt-3" role="alert">
+                            Login failed: {{ errorMessage }}
+                        </div>
+                    </form>
                 </div>
-                <div class="form-group">
-                  <button class="btn btn-primary btn-block">Login</button>
-                </div>
-
-                <div class="app-login-divider my-2"></div>
-                <div class="container">
-                  <div class="row justify-content-center">
-                    <div>
-                      <p class="mt-2">Have you already an account? <a href="/register">Register</a></p>
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group">
-                  @if (f.submitted && isLoginFailed) {
-                    <div class="alert alert-danger" role="alert">
-                      Login failed: {{ errorMessage }}
-                    </div>
-                  }
-                </div>
-              </form>
-            } @else {
-              <div class="alert alert-success">Logged in as {{ roles }}.</div>
-            }
-          </div>
+            </div>
         </div>
-      </div>
     </div>
-    <div class="row"></div>
-  </div>
 </div>
