--- a/app/src/app/register/register.component.html
+++ b/app/src/app/register/register.component.html
@@ -1,127 +1,205 @@
+<!--<div class="container">-->
+<!--    <div class="col-12">-->
+<!--        <div class="row"></div>-->
+<!--        <div class="row login-register-main-card d-flex justify-content-center my-5">-->
+<!--            <div class="col-6">-->
+<!--                <div class="card card-container">-->
+<!--                    <div class="card-header d-flex justify-content-center">-->
+<!--                        <img-->
+<!--                                id="profile-img"-->
+<!--                                src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"-->
+<!--                                class="profile-img-card"-->
+<!--                        />-->
+<!--                    </div>-->
+<!--                    <div class="card-body">-->
+<!--                        <form-->
+<!--                                name="form"-->
+<!--                                (ngSubmit)="f.form.valid && onSubmit()"-->
+<!--                                #f="ngForm"-->
+<!--                                novalidate-->
+<!--                        >-->
+<!--                            <div class="form-group">-->
+<!--                                <label>Username</label>-->
+<!--                                <input-->
+<!--                                        type="text"-->
+<!--                                        class="form-control"-->
+<!--                                        name="username"-->
+<!--                                        [(ngModel)]="form.username"-->
+<!--                                        required-->
+<!--                                        minlength="3"-->
+<!--                                        maxlength="20"-->
+<!--                                        #username="ngModel"-->
+<!--                                        [ngClass]="{ 'is-invalid': f.submitted && username.errors }"-->
+<!--                                />-->
+<!--                                <div *ngIf="username.errors && f.submitted" class="invalid-feedback">-->
+<!--                                    <div *ngIf="username.errors['required']">Username is required</div>-->
+<!--                                    <div *ngIf="username.errors['minlength']">Username must be at least 3 characters</div>-->
+<!--                                    <div *ngIf="username.errors['maxlength']">Username must be at most 20 characters</div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="form-group">-->
+<!--                                <label>Email</label>-->
+<!--                                <input-->
+<!--                                        type="email"-->
+<!--                                        class="form-control"-->
+<!--                                        name="email"-->
+<!--                                        [(ngModel)]="form.email"-->
+<!--                                        required-->
+<!--                                        email-->
+<!--                                        #email="ngModel"-->
+<!--                                        [ngClass]="{ 'is-invalid': f.submitted && email.errors }"-->
+<!--                                />-->
+<!--                                <div *ngIf="email.errors && f.submitted" class="invalid-feedback">-->
+<!--                                    <div *ngIf="email.errors['required']">Email is required</div>-->
+<!--                                    <div *ngIf="email.errors['email']">Email must be a valid email address</div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="form-group">-->
+<!--                                <label>Password</label>-->
+<!--                                <input-->
+<!--                                        type="password"-->
+<!--                                        class="form-control"-->
+<!--                                        name="password"-->
+<!--                                        [(ngModel)]="form.password"-->
+<!--                                        required-->
+<!--                                        minlength="6"-->
+<!--                                        #password="ngModel"-->
+<!--                                        [ngClass]="{ 'is-invalid': f.submitted && password.errors }"-->
+<!--                                />-->
+<!--                                <div *ngIf="password.errors && f.submitted" class="invalid-feedback">-->
+<!--                                    <div *ngIf="password.errors['required']">Password is required</div>-->
+<!--                                    <div *ngIf="password.errors['minlength']">Password must be at least 6 characters</div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="form-group">-->
+<!--                                <button class="btn btn-primary btn-block">Sign Up</button>-->
+<!--                            </div>-->
+<!--                            <div class="app-register-divider my-2"></div>-->
+<!--                            <div class="container">-->
+<!--                                <div class="row justify-content-center">-->
+<!--                                    <div>-->
+<!--                                        <p class="mt-2">Don't you have an account? <a routerLink="/login">Login</a></p>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div *ngIf="f.submitted && isSignUpFailed" class="alert alert-warning">-->
+<!--                                Signup failed!<br />{{ errorMessage }}-->
+<!--                            </div>-->
+<!--                        </form>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="row"></div>-->
+<!--    </div>-->
+<!--</div>-->
 <div class="container">
-  <div class="col-12">
-    <div class="row"></div>
-    <div class="row login-register-main-card d-flex justify-content-center my-5">
-      <div class="col-6">
-        <div class="card card-container">
-          <div class="card-header d-flex justify-content-center">
-            <img
-              id="profile-img"
-              src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
-              class="profile-img-card"
-            />
-          </div>
-          <div class="card-body">
-            @if (!isSuccessful) {
-              <form
-                name="form"
-                (ngSubmit)="f.form.valid && onSubmit()"
-                #f="ngForm"
-                novalidate
-              >
-                <div class="form-group">
-                  <label>Username</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    name="username"
-                    [(ngModel)]="form.username"
-                    required
-                    minlength="3"
-                    maxlength="20"
-                    #username="ngModel"
-                    [ngClass]="{ 'is-invalid': f.submitted && username.errors }"
-                  />
-                  @if (username.errors && f.submitted) {
-                    <div class="invalid-feedback">
-                      @if (username.errors['required']) {
-                        <div>Username is required</div>
-                      }
-                      @if (username.errors['minlength']) {
-                        <div>Username must be at least 3 characters</div>
-                      }
-                      @if (username.errors['maxlength']) {
-                        <div>Username must be at most 20 characters</div>
-                      }
+    <div class="row justify-content-center my-5">
+        <div class="col-md-6">
+            <div class="card login-card">
+                <div class="card-body">
+                    <div class="profile-img-container text-center">
+                        <img
+                                id="profile-img"
+                                src="assets/avatar_icon.jpg"
+                                class="profile-img-card"
+                        />
                     </div>
-                  }
-                </div>
-                <div class="form-group">
-                  <label>Email</label>
-                  <input
-                    type="email"
-                    class="form-control"
-                    name="email"
-                    [(ngModel)]="form.email"
-                    required
-                    email
-                    #email="ngModel"
-                    [ngClass]="{ 'is-invalid': f.submitted && email.errors }"
-                  />
-                  @if (email.errors && f.submitted) {
-                    <div class="invalid-feedback">
-                      @if (email.errors['required']) {
-                        <div>Email is required</div>
-                      }
-                      @if (email.errors['email']) {
-                        <div>Email must be a valid email address</div>
-                      }
-                    </div>
-                  }
-                </div>
-                <div class="form-group">
-                  <label>Password</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    name="password"
-                    [(ngModel)]="form.password"
-                    required
-                    minlength="6"
-                    #password="ngModel"
-                    [ngClass]="{ 'is-invalid': f.submitted && password.errors }"
-                  />
-                  @if (password.errors && f.submitted) {
-                    <div class="invalid-feedback">
-                      @if (password.errors['required']) {
-                        <div>Password is required</div>
-                      }
-                      @if (password.errors['minlength']) {
-                        <div>Password must be at least 6 characters</div>
-                      }
-                    </div>
-                  }
-                </div>
-                <div class="form-group">
-                  <button class="btn btn-primary btn-block">Sign Up</button>
-                </div>
-                <div class="app-register-divider my-2"></div>
-                <div class="container">
-                  <div class="row justify-content-center">
-                    <div>
-                      <p class="mt-2">Don't you have an account? <a href="/login">Login</a></p>
-                    </div>
-                  </div>
-                </div>
-                @if (f.submitted && isSignUpFailed) {
-                  <div class="alert alert-warning">
-                    Signup failed!<br />{{ errorMessage }}
-                  </div>
-                }
-              </form>
-            } @else {
-              <div class="alert alert-success">Your registration is successful!</div>
-            }
-          </div>
+                    <form
+                            name="form"
+                            (ngSubmit)="f.form.valid && onSubmit()"
+                            #f="ngForm"
+                            novalidate
+                    >
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                                </div>
+                                <input
+                                        type="text"
+                                        class="form-control"
+                                        name="username"
+                                        [(ngModel)]="form.username"
+                                        placeholder="Username"
+                                        required
+                                        minlength="3"
+                                        maxlength="20"
+                                        #username="ngModel"
+                                        [ngClass]="{ 'is-invalid': f.submitted && username.errors }"
+                                />
+                                <div *ngIf="username.errors && f.submitted" class="invalid-feedback">
+                                    <div *ngIf="username.errors['required']">Username is required</div>
+                                    <div *ngIf="username.errors['minlength']">Username must be at least 3 characters</div>
+                                    <div *ngIf="username.errors['maxlength']">Username must be at most 20 characters</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                                </div>
+                                <input
+                                        type="email"
+                                        class="form-control"
+                                        name="email"
+                                        [(ngModel)]="form.email"
+                                        placeholder="Email"
+                                        required
+                                        email
+                                        #email="ngModel"
+                                        [ngClass]="{ 'is-invalid': f.submitted && email.errors }"
+                                />
+                                <div *ngIf="email.errors && f.submitted" class="invalid-feedback">
+                                    <div *ngIf="email.errors['required']">Email is required</div>
+                                    <div *ngIf="email.errors['email']">Email must be a valid email address</div>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="form-group">
+                            <label for="password" class="sr-only">Password</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                                </div>
+                                <input
+                                        type="password"
+                                        class="form-control"
+                                        id="password"
+                                        name="password"
+                                        [(ngModel)]="form.password"
+                                        placeholder="Password"
+                                        required
+                                        minlength="6"
+                                        #password="ngModel"
+                                        [ngClass]="{ 'is-invalid': f.submitted && password.errors }"
+                                />
+                                <div *ngIf="password.errors && f.submitted" class="invalid-feedback">
+                                    <div *ngIf="password.errors['required']">Password is required</div>
+                                    <div *ngIf="password.errors['minlength']">Password must be at least 6 characters</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <button class="btn btn-primary btn-block">Sign Up</button>
+                        </div>
+                        <div class="app-register-divider my-2"></div>
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div>
+                                    <p class="mt-2 text-dont-you-have-account">Don't you have an account? <a class="text-login" routerLink="/login">Login</a></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div *ngIf="f.submitted && isSignUpFailed" class="alert alert-warning">
+                            Signup failed!<br />{{ errorMessage }}
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-    <div class="row"></div>
-  </div>
 </div>
-
-
-
-
-
