--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,49 +1,51 @@
 <div id="app">
-  <nav class="main-header navbar navbar-expand">
-    <a href="#" class="navbar-brand">GlowUp</a>
-    <ul class="navbar-nav mr-auto" routerLinkActive="active">
-      <li class="nav-item">
-        <a href="/home" class="nav-link" routerLink="home">Home </a>
-      </li>
-      @if (showAdminBoard) {
-        <li class="nav-item">
-          <a href="/admin" class="nav-link" routerLink="admin">Admin Board</a>
-        </li>
-      }
-      @if (showModeratorBoard) {
-        <li class="nav-item">
-          <a href="/mod" class="nav-link" routerLink="mod">Moderator Board</a>
-        </li>
-      }
-      @if (isLoggedIn) {
-        <li class="nav-item">
-          <a href="/user" class="nav-link" routerLink="user">User</a>
-        </li>
-      }
-    </ul>
+    <nav class="main-header navbar navbar-expand">
+        <a href="#" class="navbar-brand">GlowUp</a>
+        <ul class="navbar-nav mr-auto" routerLinkActive="active">
+            @if (isLoggedIn) {
+                <li class="nav-item">
+                    <a href="/home" class="nav-link" routerLink="home">Home </a>
+                </li>
+            }
+            @if (showAdminBoard) {
+                <li class="nav-item">
+                    <a href="/admin" class="nav-link" routerLink="admin">Admin Board</a>
+                </li>
+            }
+            @if (showModeratorBoard) {
+                <li class="nav-item">
+                    <a href="/mod" class="nav-link" routerLink="mod">Moderator Board</a>
+                </li>
+            }
+            @if (isLoggedIn) {
+                <li class="nav-item">
+                    <a href="/user" class="nav-link" routerLink="user">User</a>
+                </li>
+            }
+        </ul>
 
-    @if (!isLoggedIn) {
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a href="/register" class="nav-link" routerLink="register">Sign Up</a>
-        </li>
-        <li class="nav-item">
-          <a href="/login" class="nav-link" routerLink="login">Login</a>
-        </li>
-      </ul>
-    } @else {
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a href="/profile" class="nav-link" routerLink="profile">{{ username }}</a>
-        </li>
-        <li class="nav-item">
-          <a href class="nav-link" (click)="logout()">LogOut</a>
-        </li>
-      </ul>
-    }
-  </nav>
+        @if (!isLoggedIn) {
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="/register" class="nav-link" routerLink="register">Sign Up</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/login" class="nav-link" routerLink="login">Login</a>
+                </li>
+            </ul>
+        } @else {
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="/profile" class="nav-link" routerLink="profile">{{ username }}</a>
+                </li>
+                <div *ngIf="isLoggedIn">
+                    <button (click)="logout()">Logout</button>
+                </div>
+            </ul>
+        }
+    </nav>
 
-  <div class="container">
-    <router-outlet></router-outlet>
-  </div>
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
 </div>
