--- a/app/src/app/home/home.component.html
+++ b/app/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+NN<div class="container mt-5">
     <h2>Angular Webcam Capture Image from Camera</h2>
     <div class="col-md-12">
         <webcam
@@ -13,6 +13,6 @@
     </div>
     <div class="col-12">
         <div id="results">Your taken image manifests here...</div>
-        <img [src]="webcamImage?.imageAsDataUrl" height="400px" />
+        <img [src]="webcamImage?.imageAsDataUrl" height="400px"  alt="webcam-image"/>
     </div>
 </div>
