Profile page added some arrangements for jwt changed.

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,70 +1,5 @@
 <div id="app">
-    <nav class="main-header navbar navbar-expand">
-        <a href="#" class="navbar-brand">GlowUp</a>
-        <ul class="navbar-nav mr-auto header-items" routerLinkActive="active">
-            @if (isLoggedIn) {
-                <li class="nav-item">
-                    <a href="/home" class="nav-link" routerLink="home">Home </a>
-                </li>
-                <span class="divider"></span>
-
-            }
-            @if (showAdminBoard) {
-                <li class="nav-item">
-                    <a href="/admin" class="nav-link" routerLink="admin">Admin Board</a>
-                </li>
-                <span class="divider"></span>
-
-            }
-            @if (showModeratorBoard) {
-                <li class="nav-item">
-                    <a href="/mod" class="nav-link" routerLink="mod">Moderator Board</a>
-                </li>
-                <span class="divider"></span>
-
-            }
-            @if (isLoggedIn) {
-                <li class="nav-item">
-                    <a href="/user" class="nav-link" routerLink="user">User</a>
-                </li>
-                <span class="divider"></span>
-
-            }
-            @if (isLoggedIn) {
-                <li class="nav-item">
-                    <a href="/chat-box" class="nav-link" routerLink="chat-box">Chat With GlowUp</a>
-                </li>
-                <span class="divider"></span>
-
-            }
-        </ul>
-
-        @if (!isLoggedIn) {
-            <ul class="navbar-nav ml-auto header-items">
-                <li class="nav-item">
-                    <a href="/register" class="nav-link" routerLink="register">Sign Up</a>
-                </li>
-                <span class="divider"></span>
-
-                <li class="nav-item">
-                    <a href="/login" class="nav-link" routerLink="login">Login</a>
-                </li>
-                <span class="divider"></span>
-
-            </ul>
-        } @else {
-            <ul class="navbar-nav ml-auto header-items">
-                <li class="nav-item">
-                    <a href="/profile" class="nav-link" routerLink="profile">{{ username }}</a>
-                </li>
-                <span class="divider"></span>
-
-                <div *ngIf="isLoggedIn">
-                    <button (click)="logout()" class="log-out-btn">Logout</button>
-                </div>
-            </ul>
-        }
-    </nav>
+    <app-header></app-header>
 
     <div class="container">
         <router-outlet></router-outlet>
