--- a/app/src/app/login/login.component.html
+++ b/app/src/app/login/login.component.html
@@ -8,14 +8,13 @@
                                 id="profile-img"
                                 src="assets/avatar_icon.jpg"
                                 class="profile-img-card"
+                                alt=""
                         />
                     </div>
-                    <form
-                            name="form"
-                            (ngSubmit)="f.form.valid && onSubmit()"
-                            #f="ngForm"
-                            novalidate
-                    >
+                    <form name="form"
+                          (ngSubmit)="f.form.valid && onSubmit()"
+                          #f="ngForm"
+                          novalidate>
                         <div class="form-group">
                             <label for="username" class="sr-only">Username</label>
                             <div class="input-group">
@@ -33,7 +32,9 @@
                                         #username="ngModel"
                                         [ngClass]="{ 'is-invalid': f.submitted && username.errors }"
                                 />
-                                <div *ngIf="username.errors && f.submitted" class="invalid-feedback">Username is required!</div>
+                                <div *ngIf="username.errors && f.submitted" class="invalid-feedback">Username is
+                                    required!
+                                </div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -56,12 +57,13 @@
                                 />
                                 <div *ngIf="password.errors && f.submitted" class="invalid-feedback">
                                     <div *ngIf="password.errors['required']">Password is required</div>
-                                    <div *ngIf="password.errors['minlength']">Password must be at least 6 characters</div>
+                                    <div *ngIf="password.errors['minlength']">Password must be at least 6 characters
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group form-check">
-                            <input type="checkbox" class="form-check-input" id="rememberMe" />
+                            <input type="checkbox" class="form-check-input" id="rememberMe"/>
                             <label class="form-check-label" for="rememberMe">Remember me</label>
                         </div>
                         <button class="btn btn-primary btn-block">Login</button>
