--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div id="app">
     <app-header></app-header>
 
-    <div class="container">
+    <div class="container" style="padding-left: 78px">
         <router-outlet></router-outlet>
     </div>
 </div>
