--- a/app/src/app/header/header.component.html
+++ b/app/src/app/header/header.component.html
@@ -1,11 +1,12 @@
 <nav class="main-header navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">GlowUp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item" *ngIf="isLoggedIn">
+        <ul class="navbar-nav mr-auto" *ngIf="user">
+            <li class="nav-item">
                 <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
             </li>
             <li class="nav-item" *ngIf="showAdminBoard">
@@ -21,7 +22,7 @@
                 <a class="nav-link" routerLink="/chat-box" routerLinkActive="active">Chat With GlowUp</a>
             </li>
             <li class="nav-item" *ngIf="isLoggedIn">
-                <a class="nav-link" routerLink="/skin-analysis" routerLinkActive="active">Analysis Your Skin</a>
+                <a class="nav-link" routerLink="/capture" routerLinkActive="active">Analysis Your Skin</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
@@ -31,9 +32,10 @@
             <li class="nav-item" *ngIf="!isLoggedIn">
                 <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
             </li>
-            <li class="nav-item dropdown" *ngIf="isLoggedIn">
-                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    {{ user.name }} {{user.lastName}}
+            <li class="nav-item dropdown" *ngIf="user">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    {{ user.name }} {{ user.lastName }}
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" routerLink="/profile" routerLinkActive="active">Profile</a>
