--- a/app/src/app/home/home.component.css
+++ b/app/src/app/home/home.component.css
@@ -54,3 +54,133 @@
     font-size: 1.5em;
     font-weight: bold;
 }
+
+.animated-divider-container {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    height: 10px;
+    margin-top: 20px;
+    background-color: #ddd;
+}
+
+.animated-divider {
+    width: 100%;
+    height: 100%;
+    background-color: #3a4454;
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: slide 5s linear infinite;
+}
+
+@keyframes slide {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+.skin-analysis-section {
+    margin-top: 40px;
+}
+
+.skin-analysis-section h2 {
+    font-size: 2em;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.skin-analysis-section p {
+    font-size: 1.2em;
+    line-height: 1.5;
+    margin-bottom: 15px;
+}
+
+.skin-analysis-section img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 70%;
+}
+
+.animated-laser-dots {
+    position: relative;
+}
+
+.animated-laser-dots::after {
+    content: '';
+    position: absolute;
+    top: 20%;
+    left: 30%;
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    border-radius: 50%;
+    animation: blink 1s infinite;
+}
+
+@keyframes blink {
+    0%, 100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+}
+
+.circular-image {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.attention-grabber {
+    display: flex;
+    align-items: center;
+    font-size: 1.5em;
+    font-weight: bold;
+    color: #25333f; /* Highlight color */
+    margin-top: 20px;
+    padding: 10px;
+    border-radius: 5px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.attention-grabber i {
+    margin-right: 10px;
+    animation: pulse 2s infinite;
+}
+
+.attention-grabber span {
+    animation: blink 1s infinite;
+}
+
+.attention-grabber:hover {
+    transform: scale(1.1);
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes blink {
+    0%, 100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+}
