--- a/app/src/app/header/header.component.css
+++ b/app/src/app/header/header.component.css
@@ -1,6 +1,5 @@
 .main-header {
-    background-color: #3A4454;
-    color: #FFFFFF;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .main-header .navbar-brand {
@@ -9,17 +8,19 @@
 }
 
 .main-header .nav-link {
-    color: #C2B2B4;
+    color: #6B4E71;
     margin-right: 10px;
 }
 
 .main-header .nav-link:hover,
 .main-header .nav-link.active {
-    color: #6B4E71;
+    background-color: #C2B2B4;
+    border-radius: 15px;
+    color: #FFFFFF;
 }
 
 .main-header .navbar-toggler {
-    border-color: #6B4E71;
+    border-color: #C2B2B4;
 }
 
 .main-header .navbar-toggler-icon {
@@ -36,10 +37,14 @@
 }
 
 .main-header .dropdown-item:hover {
-    background-color: #6B4E71;
+    background-color: #C2B2B4;
     color: #FFFFFF;
 }
 
 .main-header .dropdown-divider {
-    border-top: 1px solid #6B4E71;
+    border-top: 1px solid #C2B2B4;
+}
+.nav-item{
+    position: relative;
+    list-style: none;
 }
