--- a/app/src/app/header/header.component.html
+++ b/app/src/app/header/header.component.html
@@ -5,8 +5,8 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto" *ngIf="user">
-            <li class="nav-item">
+        <ul class="nav-list navbar-nav mr-auto" *ngIf="user">
+            <li>
                 <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
             </li>
             <li class="nav-item" *ngIf="showAdminBoard">
