--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -11,37 +11,16 @@ body {
 
 @keyframes gradientAnimation {
     0% {
-        background-position: 0% 50%;
+        background-position: 0 50%;
     }
     50% {
         background-position: 100% 50%;
     }
     100% {
-        background-position: 0% 50%;
+        background-position: 0 50%;
     }
 }
 
-.navbar {
-    background: #3A4454;
-}
-
-.navbar .nav-link {
-    color: #fff;
-}
-
-.main-header .navbar-brand {
-    color: #fff;
-    padding-left: 1rem;
-}
-
-html, body {
-    height: 100%;
-}
-
-body {
-    margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
-}
 
 span.mdc-tab__text-label {
     color: #FFFFFF;
