Blog part added.

--- a/app/src/app/components/home/home.component.html
+++ b/app/src/app/components/home/home.component.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="col-4">
                     <div class="icon-container">
-                        <div class="icon-circle" style="background:#6B4E71 ">
+                        <div class="icon-circle" style="background:#F5DDDD ">
                             <img src="assets/home-page-icons/skin-care.png" alt="WeNP"
                                  class="img-fluid home-page-icons">
                         </div>
