--- a/app/src/app/components/header/header.component.html
+++ b/app/src/app/components/header/header.component.html
@@ -27,6 +27,9 @@
             <li class="nav-item" *ngIf="isLoggedIn">
                 <a class="nav-link" routerLink="/blogs" routerLinkActive="active">Blogs</a>
             </li>
+            <li class="nav-item" *ngIf="isLoggedIn">
+                <a class="nav-link" routerLink="/contact-us" routerLinkActive="active">Contact Us</a>
+            </li>
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item" *ngIf="!isLoggedIn">
@@ -36,7 +39,7 @@
                 <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
             </li>
             <li class="nav-item dropdown" *ngIf="user">
-                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
+                <a class="dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
                     <img [src]="user.avatarUrl" alt="{{ user.name }}'in avatarı" class="avatar">
                 </a>
