fetched products from Amazon Apı for slider

--- a/app/src/app/components/home/home.component.html
+++ b/app/src/app/components/home/home.component.html
@@ -111,9 +111,7 @@
     </div>
 
 <!--    BURASI AYRI COMPONENT OLARAK YAPILCAK-->
-    <div class="contact-us">
-
-    </div>
+<app-product-slider></app-product-slider>
 
 
 </div>
